--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -5,11 +5,10 @@
     justify-content: space-between;
     align-items: center;
     font-family: "Poppins", sans-serif;
-    position: fixed;
-    top: 0;
     width: 70%;
     height: fit-content;
-    transition: 0.4s ease top;
+    position: fixed;
+    transition: 0.4s ease transform;
 }
 
 .header-container img {
